--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <script>
 let characteristic;
+
 async function connect() {
   const device = await navigator.bluetooth.requestDevice({
     filters: [{ namePrefix: "InfinityMirror" }],
@@ -14,8 +15,9 @@ async function connect() {
   const service = await server.getPrimaryService("12345678-1234-1234-1234-1234567890ab");
   characteristic = await service.getCharacteristic("abcd1234-5678-90ab-cdef-1234567890ab");
 }
+
 async function sendCommand(cmd) {
   if (!characteristic) await connect();
-  await characteristic.writeValue(new TextEncoder().encode(cmd));
+  await characteristic.writeValueWithResponse(new TextEncoder().encode(cmd));
 }
 </script>
