--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <h1>Infinity Mirror Controller</h1>
+<h2>操作パネル </h2>
+
 <button onclick="sendCommand('MODE:0')">🌈 レインボー</button>
 <button onclick="sendCommand('MODE:1')">✨ スパークル</button>
 <button onclick="sendCommand('MODE:2')">🕳 ブラックホール</button>
