feat: Change solid color to blue

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         .mode-button.rainbow { background: linear-gradient(45deg, #ff9a9e, #fecfef, #fecfef); }
         .mode-button.sparkle { background: linear-gradient(45deg, #a8edea, #fed6e3); }
         .mode-button.blackhole { background: linear-gradient(45deg, #2c3e50, #4a6741); }
-        .mode-button.solid { background: linear-gradient(45deg, #ff6b6b, #ee5a24); }
+        .mode-button.solid { background: linear-gradient(45deg, #4facfe, #00f2fe); }
         .mode-button.segment { background: linear-gradient(45deg, #4ecdc4, #44a08d); }
         .mode-button.chase { background: linear-gradient(45deg, #f093fb, #f5576c); }
         .mode-button.breath { background: linear-gradient(45deg, #4facfe, #00f2fe); }
@@ -144,7 +144,7 @@
                 <span class="emoji">🕳️</span>ブラックホール
             </button>
             <button class="mode-button solid" onclick="sendCommand('MODE:3')">
-                <span class="emoji">🔴</span>単色（赤）
+                <span class="emoji">🔵</span>単色（青）
             </button>
             <button class="mode-button segment" onclick="sendCommand('MODE:4')">
                 <span class="emoji">🎨</span>セグメント色分け
